--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     <section class="jumbotron text-center">
       <img src="img/img-1.jpg" alt="gambar_pribadi" width="200" class="rounded img-thumbnail" />
-      <h1 class="display-4">Gapurendro Ardhyogi</h1>
-      <p class="lead">Project Manager | Software Engineer</p>
+      <h1 class="display-4">PT BUANA TRANS KOMUNIKASI</h1>
+      <p class="lead">We make IT for you</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
