Menambahin logo culun wkwkkwkwkwkw

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark shadow" style="background-color: #0d6efd">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top" />
+          <img src="img/logo_buana.png" alt="" width="30" height="24" class="d-inline-block align-text-top" />
           PT BUANA TRANS KOMUNIKASI
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
