benerin service bira terlihat lebih anggun c sasmi wkwkwkkwkwkwkkw

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark shadow" style="background-color: #0d6efd">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="img/logo_buana.png" alt="" width="30" height="24" class="d-inline-block align-text-top" />
-          PT BUANA TRANS KOMUNIKASI
-        </a>
+        <a class="navbar-brand" href="#"> PT BUANA TRANS KOMUNIKASI </a>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
@@ -49,7 +46,7 @@
     <!-- start Jumbotron -->
 
     <section class="jumbotron text-center">
-      <img src="img/img-1.jpg" alt="gambar_pribadi" width="200" class="rounded img-thumbnail" />
+      <img src="img/space-blue-computer-monitor.png" alt="gambar_pribadi" width="400" class="rounded img-thumbnail" />
       <h1 class="display-4">PT BUANA TRANS KOMUNIKASI</h1>
       <p class="lead">We make IT for you</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -73,7 +70,7 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4">
             <p>We are a full-service digital marketing consultant based in Jakarta. We combine a data-driven approach with knowledge gained from years in digital marketing to deliver outstanding results to our clients.</p>
           </div>
         </div>
@@ -88,7 +85,7 @@
     </section>
     <!-- end about -->
 
-    <!-- services -->
+    <!-- services
 
     <section id="service">
       <div class="container">
@@ -99,7 +96,7 @@
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/projects/projects-1.jpg" class="card-img-top" alt="projects-1" />
+                <img src="img/papery-girl-3.png" class="card-img-top" alt="projects-1" />
                 <div class="card-body">
                   <h4 class="card-title">Data-Driven Digital Strategy</h4>
                 </div>
@@ -112,7 +109,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/projects/projects-2.jpg" class="card-img-top" alt="projects-2" />
+                <img src="img/space-21.png" class="card-img-top" alt="projects-2" />
                 <div class="card-body">
                   <h4 class="card-title">Digital Assets Development</h4>
                 </div>
@@ -127,7 +124,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/projects/projects-3.jpg" class="card-img-top" alt="projects-3" />
+                <img src="img/space-blue-computer-monitor.png" class="card-img-top" alt="projects-3" />
                 <div class="card-body">
                   <h4 class="card-title">Traffic Generation Strategy</h4>
                 </div>
@@ -142,7 +139,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/projects/projects-4.jpg" class="card-img-top" alt="projects-4" />
+                <img src="img/table-1.png" class="card-img-top" alt="projects-4" />
                 <div class="card-body">
                   <h4 class="card-title">Content Planning & Creation</h4>
                 </div>
@@ -166,7 +163,62 @@
         ></path>
       </svg>
     </section>
-    <!-- end services -->
+    end services -->
+    <!-- junk 
+
+d-block w-5
+
+-->
+
+    <!-- Service -->
+    <div id="service" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#service" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#service" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#service" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#service" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active text-center">
+          <img src="img/papery-girl-3.png" class="img-thumbnail" alt="slide_1" />
+          <div class="carousel-caption d-none d-md-block text-primary">
+            <h5>Data-Driven Digital Strategy</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item text-center">
+          <img src="img/space-21.png" class="img-thumbnail" alt="slide_2" />
+          <div class="carousel-caption d-none d-md-block text-primary">
+            <h5>Digital Assets Developmen</h5>
+
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item text-center">
+          <img src="img/new-mail.png" class="img-thumbnail" alt="slide_3" />
+          <div class="carousel-caption d-none d-md-block text-primary">
+            <h5>Traffic Generation Strategy</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item text-center">
+          <img src="img/table-1.png" class="img-thumbnail" alt="slide_4" />
+          <div class="carousel-caption d-none d-md-block text-primary">
+            <h5>Content Planning & Creation</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#service" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#service" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- end service -->
 
     <!-- Contacts -->
 
